--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,6 +40,8 @@
           = yield
         .col-lg-3
           .well.sidebar-nav
+            = render 'misc/register'
+            = render 'misc/login'
             %h3 Sidebar
             %ul.nav.nav-list
               %li.nav-header Sidebar
