omniauth stuff like twitter yo

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -15,7 +15,17 @@ body {
     color: whitesmoke;
     font-size: 32px;
     line-height: 28px;
+    font-family: 'The Girl Next Door';
   }
+}
+
+.user-nav {
+  color: whitesmoke;
+}
+
+.form-horizontal .form-group {
+  margin-left: 0;
+  margin-right: 0;
 }
 
 h2.lead {
