--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,8 @@
     /[if lt IE 9]
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"
     = stylesheet_link_tag "application", :media => "all"
+    = stylesheet_link_tag "//fonts.googleapis.com/css?family=The+Girl+Next+Door"
+
     /= favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144'
     /= favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114'
     /= favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72'
@@ -25,7 +27,7 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.navbar-brand(href="/") By The End <br/>Of The Year
+        %a.navbar-brand(href="/") By The End Of The Year
         .nav-collapse.collapse.navbar-responsive-collapse
           %ul.nav.navbar-nav
             %li= link_to "Link 1", "/path1"
@@ -33,20 +35,23 @@
             %li= link_to "Link 3", "/path3"
             %li= link_to "Link 3", "/path3"
 
-    .container.main-container
+        .pull-right.user-nav
+          = render 'misc/register'
+          = render 'misc/login'
+
+    .container
       .row
-        .col-lg-9
+        .col-lg-12
           = bootstrap_flash
-          = yield
-        .col-lg-3
-          .well.sidebar-nav
-            = render 'misc/register'
-            = render 'misc/login'
-            %h3 Sidebar
-            %ul.nav.nav-list
-              %li.nav-header Sidebar
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
+          .well
+            = yield
+        /.col-lg-3
+        /  .well.sidebar-nav
+        /    %h3 Sidebar
+        /    %ul.nav.nav-list
+        /      %li.nav-header Sidebar
+        /      %li= link_to "Link 1", "/path1"
+        /      %li= link_to "Link 2", "/path2"
+        /      %li= link_to "Link 3", "/path3"
       /%footer
       /  %p &copy; Company 2013
