--- a/app/views/misc/_login.html.haml
+++ b/app/views/misc/_login.html.haml
@@ -1,4 +1,5 @@
 - if user_signed_in?
+  %b= "Hi, #{current_user.name}"
   = link_to 'Logout', destroy_user_session_path, method: :delete
 - else
   = link_to 'Sign in', new_user_session_path
