--- a/app/views/misc/_login.html.haml
+++ b/app/views/misc/_login.html.haml
@@ -1,5 +1,5 @@
 - if user_signed_in?
-  %b= "Hi, #{current_user.name}"
+  %b= "Hi, #{user_name(current_user)}"
   = link_to 'Logout', destroy_user_session_path, method: :delete
 - else
   = link_to 'Sign in', new_user_session_path
