--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -18,6 +18,7 @@ body {
   background: url(image-path('content-bg.png')) repeat top left;
   border-radius: 0;
   border: 0;
+  margin-top: 100px;
 }
 
 //.navbar-inverse {
