set current quantity etc

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -68,3 +68,15 @@ form.xlarge {
     height: auto;
   }
 }
+
+.status {
+  text-align: center;
+}
+
+h2.positive {
+  color: green;
+}
+
+h2.negative {
+  color: red;
+}
