--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -73,6 +73,13 @@ form.xlarge {
   text-align: center;
 }
 
+span.quantity {
+  font-size: 30px;
+  font-weight: bold;
+  background-color: lightblue;
+  padding: 0 5px;
+}
+
 h2.positive {
   color: green;
 }
