--- a/app/views/goals/_form.html.haml
+++ b/app/views/goals/_form.html.haml
@@ -1,5 +1,17 @@
-= simple_form_for @goal, url: goals_path, :html => { :class => 'form-horizontal large' } do |f|
-  = f.input :description
-  = f.input :quantity
-  = f.button :submit, :class => 'btn-primary'
-  = link_to t('.cancel', :default => t("helpers.links.cancel")), goals_path, :class => 'btn btn-default'
+= form_for @goal || Goal.new, url: goals_path, :html => { :class => 'form-horizontal large' } do |f|
+  - if @goal.errors.any?
+    .alert.alert-danger
+      %b Error!
+      You must include a numeric quantity in your goal ("I will run 300 miles.")
+  .form-group
+    = f.text_field :description, class: 'form-control', autofocus: false, value: 'This year I will '
+  = f.submit "Submit", :disable_with => 'Submiting...', class: 'btn btn-large btn-primary'
+  .pull-right
+    %span.quantity
+      X
+
+/= simple_form_for @goal, url: goals_path, :html => { :class => 'form-horizontal large' } do |f|
+/  = f.input :description
+/  = f.input :quantity
+/  = f.button :submit, :class => 'btn-primary'
+/  = link_to t('.cancel', :default => t("helpers.links.cancel")), goals_path, :class => 'btn btn-default'
