--- a/app/views/goals/_short_form.html.haml
+++ b/app/views/goals/_short_form.html.haml
@@ -1,7 +1,6 @@
 = form_for @goal || Goal.new, url: goals_path, :html => { :class => 'form-horizontal large' } do |f|
   .form-group
-    /= f.label :description, class: 'control-label'
-    /.input-group
-    /%span.input-group-addon This year I will
     = f.text_field :description, class: 'form-control', autofocus: false, value: 'This year I will '
-  = f.submit "Submit", :disable_with => 'Submiting...', class: 'btn btn-large btn-primary'
+  = f.submit "Submit", disabled: true, :disable_with => 'Submiting...', class: 'btn btn-large btn-primary'
+  .pull-right
+    %span.quantity.hidden
