--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,7 +45,7 @@
           = bootstrap_flash
           .well
             = yield
-          = yield :carousel
+          = yield :ps
         /.col-lg-3
         /  .well.sidebar-nav
         /    %h3 Sidebar
