--- a/app/views/misc/_login.html.haml
+++ b/app/views/misc/_login.html.haml
@@ -1,7 +1,8 @@
 - if user_signed_in?
   %span= "Hi, #{user_name(current_user)}"
   .controls
-    = link_to glyph('signout'), destroy_user_session_path, method: :delete
+    = link_to glyph('signout'), destroy_user_session_path, method: :delete, 
+        class: 'has-tooltip', data: { toggle: 'tooltip', placement: 'bottom', original_title: 'Logout' }, title: 'Logout'
 - else
   %span Sign in with:
   .providers
