--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,9 +1,10 @@
 = render 'goals/short_form'
 
 - content_for :ps do
+  /%h4.pull-right <i class='icon icon-arrow-down'></i> Get Inspired! <i class='icon icon-arrow-down'></i>
   .carousel.slide{ data: { ride: 'carousel' } }
     .carousel-inner
-      .item.active= "I will #{@examples.shift}"
+      .item.active= "I will #{@examples.shift}.".html_safe
       - @examples.each do |example|
-        .item= "I will #{example}."
-
+        .item= "I will #{example}.".html_safe
+  %h4.pull-right <i class='icon icon-arrow-up'></i> Get Inspired! <i class='icon icon-arrow-up'></i>
