--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -59,9 +59,18 @@ a.btn:visited {
   //background-color: #333;
   .navbar-brand {
     color: whitesmoke;
+    color: #333;
     font-size: 32px;
     line-height: 28px;
-    font-family: 'The Girl Next Door';
+    //font-family: 'The Girl Next Door';
+    font-family: Arial;
+    a {
+      color: #333;
+    }
+    .slogan {
+      font-size: 14px;
+      line-height: normal;
+    }
   }
 }
 
