--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,8 @@
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"
     = stylesheet_link_tag "application", :media => "all"
     = stylesheet_link_tag "//fonts.googleapis.com/css?family=The+Girl+Next+Door"
+    = stylesheet_link_tag "//fonts.googleapis.com/css?family=Coustard:400,900"
+    = stylesheet_link_tag "//fonts.googleapis.com/css?family=Titillium+Web:900,700"
 
     /= favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144'
     /= favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114'
