add facebook - holy meh

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -53,6 +53,10 @@ a.btn:visited {
   padding: 24px 40px 36px;
 }
 
+.xxl {
+  font-size: 80px;
+}
+
 //.navbar-inverse {
 .navbar {
   margin-bottom: 80px;
