--- a/app/views/misc/_login.html.haml
+++ b/app/views/misc/_login.html.haml
@@ -7,4 +7,4 @@
   %span Sign in with:
   .providers
     = link_to glyph('twitter'), user_omniauth_authorize_path(provider: :twitter)
-    = link_to glyph('facebook'), user_omniauth_authorize_path(provider: :twitter)
+    = link_to glyph('facebook'), user_omniauth_authorize_path(provider: :facebook)
