--- a/app/views/misc/_login.html.haml
+++ b/app/views/misc/_login.html.haml
@@ -1,10 +1,13 @@
 - if user_signed_in?
   %span= "Hi, #{user_name(current_user)}"
   .controls
+    - if current_user.goal
+      = link_to glyph('cog'), edit_goals_path
     = link_to glyph('signout'), destroy_user_session_path, method: :delete, 
         class: 'has-tooltip', data: { toggle: 'tooltip', placement: 'bottom', original_title: 'Logout' }, title: 'Logout'
 - else
   %span Sign in with:
   .providers
+    = link_to glyph('google-plus'), user_omniauth_authorize_path(provider: :google_oauth2)
     = link_to glyph('twitter'), user_omniauth_authorize_path(provider: :twitter)
     = link_to glyph('facebook'), user_omniauth_authorize_path(provider: :facebook)
