--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,7 @@
     = stylesheet_link_tag "//fonts.googleapis.com/css?family=The+Girl+Next+Door"
     = stylesheet_link_tag "//fonts.googleapis.com/css?family=Coustard:400,900"
     = stylesheet_link_tag "//fonts.googleapis.com/css?family=Titillium+Web:900,700"
+    = stylesheet_link_tag '//fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css'
 
     /= favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144'
     /= favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114'
@@ -35,7 +36,7 @@
         /%p.navbar-text
         /  SET ONE QUANTIFIABLE GOAL<br/>
         /  AND TRACK YOUR PROGRESS TOWARDS IT
-        %button.navbar-toggle(type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse")
+        //%button.navbar-toggle(type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse")
         /  %span.icon-bar
         /  %span.icon-bar
         /  %span.icon-bar
