--- a/app/views/points/_new.html.haml
+++ b/app/views/points/_new.html.haml
@@ -1,11 +1,17 @@
 /= render 'points/form'
 .pull-right
-  = link_to 'Update my progress', '#', id: 'new-point', class: 'btn btn-primary btn-lg'
+  = link_to 'Update my progress', '#new-point', class: 'btn btn-primary btn-lg', data: { toggle: 'modal' }
 
-.modal.fade
-  .modal-dialog
-    .modal-content
-      .modal-header
-        %h3 I've made progress towards my goal!
-      .modal-body
-        = render 'points/form'
+
+= modal_dialog id: 'new-point', 
+           header: { show_close: true, dismiss: 'modal', title: "I've made progress toward my goal!" }, 
+           body: Proc.new { render 'points/form' }.call,
+           footer: nil
+
+/.modal.fade
+/  .modal-dialog
+/    .modal-content
+/      .modal-header
+/        %h3 I've made progress towards my goal!
+/      .modal-body
+/        = render 'points/form'
