better at small resos

--- a/app/assets/stylesheets/style.css.scss.less
+++ b/app/assets/stylesheets/style.css.scss.less
@@ -239,7 +239,7 @@ h2.negative {
 
 @media (max-width: @screen-xs-max) {
   form.large input[type="text"] {
-    padding: 2px;
+    padding: 4px 6px;
     font-size: 14px;
   }
 
@@ -250,5 +250,16 @@ h2.negative {
   .user-nav {
     display: inline-block;
     float: right;
+    .providers {
+      font-size: 26px;
+    }
+  }
+
+  .navbar {
+    margin-bottom: 15px;
+  }
+
+  .well {
+    padding: 10px;
   }
 }
