--- a/app/assets/stylesheets/style.css.scss.less
+++ b/app/assets/stylesheets/style.css.scss.less
@@ -256,10 +256,11 @@ h2.negative {
   }
 
   .navbar {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
 
   .well {
     padding: 10px;
+    margin-top: 0;
   }
 }
