--- a/app/views/goals/_form.html.haml
+++ b/app/views/goals/_form.html.haml
@@ -5,6 +5,6 @@
       You must include a numeric quantity in your goal ("I will run 300 miles.")
   .form-group
     = f.text_field :description, class: 'form-control', autofocus: false, value: @goal.description || 'This year I will '
-  = f.submit "Submit", :disable_with => 'Submiting...', class: 'btn btn-large btn-primary'
+  = f.submit "Set my goal", :disable_with => 'Submiting...', class: 'btn btn-large btn-primary'
   .pull-right
     %span.quantity
