--- a/app/views/misc/_login.html.haml
+++ b/app/views/misc/_login.html.haml
@@ -2,8 +2,8 @@
   %span= "Hi, #{user_name(current_user)}"
   .controls
     - if current_user.goal
-      = link_to glyph('cog'), edit_goals_path
-    = link_to glyph('signout'), destroy_user_session_path, method: :delete, 
+      = link_to icon('cog'), edit_goals_path
+    = link_to icon('sign-out'), destroy_user_session_path, method: :delete, 
         class: 'has-tooltip', data: { toggle: 'tooltip', placement: 'bottom', original_title: 'Logout' }, title: 'Logout'
 - else
   %span Sign in with:
