--- a/app/views/points/_form.html.haml
+++ b/app/views/points/_form.html.haml
@@ -1,9 +1,15 @@
-= form_for([@goal, @point || Point.new], url: goals_points_path, html: { class: 'fform-horizontal' }) do |f|
+= form_for([@goal, @point || Point.new], url: goals_points_path, html: { class: 'form-horizontal' }) do |f|
   .form-group
-    = label_tag :quantity, "Quantity (how many of what you're doing, that you did)"
-    = f.text_field :quantity, class: 'form-control'
+    = label_tag :quantity, "Quantity", class: 'control-label col-sm-2'
+    .col-sm-10
+      = f.text_field :quantity, required: true, class: 'form-control'
+      %span.help-block How many of what you're doing, that you did. (Required)
   .form-group
-    = label_tag :comments, "Comments (leave yourself a note) (optional)"
-    = f.text_field :comments, class: 'form-control'
-
-  = f.submit 'Save my progress', class: 'btn btn-primary'
+    = label_tag :comments, "Comments", class: 'control-label col-sm-2'
+    .col-sm-10
+      = f.text_field :comments, class: 'form-control col-sm-10'
+      %span.help-block Leave yourself a note (optional).
+  .form-group
+    .col-sm-2
+    .col-sm-8
+      = f.submit 'Save my progress', class: 'btn btn-primary'
