add favicons, fix some turbolink shite

--- a/app/assets/stylesheets/style.css.scss.less
+++ b/app/assets/stylesheets/style.css.scss.less
@@ -12,6 +12,7 @@ footer {
   height: 40px;
   text-align: right;
   color: #c7c7c7;
+  color: white;
   text-shadow: 1px 1px 1px #333;
 }
 
@@ -75,13 +76,15 @@ a.xxl {
   color: #333;
   display: block;
   padding: 10px;
+  margin-bottom: 20px;
+
   h2 {
     margin: 0;
   }
 
   &:hover {
     text-decoration: none;
-    color: #5200FF;
+    color: white;
   }
 }
 
@@ -92,7 +95,7 @@ a.xxl {
   .navbar-brand {
     color: whitesmoke;
     color: #333;
-    font-size: 32px;
+    font-size: 36px;
     line-height: 28px;
     //font-family: 'The Girl Next Door';
     font-family: Arial;
@@ -100,6 +103,10 @@ a.xxl {
       font-family: 'Coustard';
       font-weight: 900;
       color: #333;
+      &:hover {
+        text-decoration: none;
+        color: white;
+      }
     }
     .slogan {
       font-family: 'Titillium Web';
@@ -148,13 +155,6 @@ h2.lead {
   line-height: 60px;
   //margin-top: 0;
   //margin: 8px 0;
-}
-
-.fa-google:before {
-  content: "\f0d5";
-  width: 0.58em;
-  overflow: hidden;
-  display: inline-block;
 }
 
 form.large {
