style stuff, remove login stuff

--- a/app/assets/stylesheets/style.css.scss.less
+++ b/app/assets/stylesheets/style.css.scss.less
@@ -64,7 +64,6 @@ a.btn:visited {
   background: image-url('content-bg.png') repeat top left;
   border-radius: 0;
   border: 0;
-  //margin-top: 80px;
   margin-top: 20px;
   padding: 24px 40px 36px;
 }
@@ -88,17 +87,13 @@ a.xxl {
   }
 }
 
-//.navbar-inverse {
 .navbar {
   margin-bottom: 80px;
-  //background-color: #333;
   .navbar-brand {
     color: whitesmoke;
     color: #333;
     font-size: 36px;
     line-height: 28px;
-    //font-family: 'The Girl Next Door';
-    font-family: Arial;
     a {
       font-family: 'Coustard';
       font-weight: 900;
@@ -130,7 +125,7 @@ a.xxl {
 
   .providers,
   .controls {
-    text-align: right;
+    text-align: center;
     font-size: 32px;
 
     a {
@@ -139,7 +134,6 @@ a.xxl {
       &:hover {
         text-decoration: none;
         color: white;
-        //background-color: #00FFF5;
       }
     }
   }
@@ -211,11 +205,22 @@ form.xlarge {
   font-size: 18px;
 }
 
-.ps h4 {
+.ps h4,
+a.loud,
+.user-nav span,
+.help a {
   color: #00FFF5;
   color: whitesmoke;
   background-color: #333;
   padding: 5px 10px;
+  font-family: 'Titillium Web';
+  font-weight: 700;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.ps h4 {
+  margin-top: 0;
 }
 
 .carousel {
@@ -225,9 +230,9 @@ form.xlarge {
   line-height: normal;
   .item {
     span {
-      background-color: #333;
+      //background-color: #333;
       color: #00FFF5;
-      padding: 2px 8px;
+      //padding: 2px 8px;
     }
   }
 }
@@ -239,7 +244,6 @@ input#point_quantity {
 span.quantity {
   font-size: 30px;
   font-weight: bold;
-  //background-color: lightblue;
   padding: 0 5px;
 }
 
@@ -248,13 +252,8 @@ h2.positive, h2.negative {
   margin-bottom: 10px;
 }
 
-h2.positive {
-  color: green;
-}
-
-h2.negative {
-  color: red;
-}
+h2.positive { color: green; }
+h2.negative { color: red;   }
 
 @import "twitter/bootstrap/variables.less";
 
