--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -7,4 +7,4 @@
       .item.active= "This year I will #{@examples.shift}.".html_safe
       - @examples.each do |example|
         .item= "This year I will #{example}.".html_safe
-  %h4.pull-right <i class='fa fa-arrow-up'></i> Get Inspired! <i class='fa fa-arrow-up'></i>
+  %h4.pull-right  Get Inspired! <i class='fa fa-arrow-up'></i>
