--- a/app/assets/stylesheets/style.css.scss.less
+++ b/app/assets/stylesheets/style.css.scss.less
@@ -198,6 +198,15 @@ form.xlarge {
   h3 { 
     margin: 0;
   }
+  .close {
+    margin-top: 2px;
+    margin-right: 6px;
+  }
+}
+
+.close {
+  color: white;
+  opacity: 0.8;
 }
 
 .status {
@@ -207,6 +216,7 @@ form.xlarge {
 
 .ps h4,
 a.loud,
+//footer,
 .user-nav span,
 .help a {
   color: #00FFF5;
