--- a/app/assets/stylesheets/style.css.scss.less
+++ b/app/assets/stylesheets/style.css.scss.less
@@ -10,10 +10,28 @@ html, body {
 
 footer {
   height: 40px;
-  text-align: right;
+  //text-align: right;
   color: #c7c7c7;
-  color: white;
-  text-shadow: 1px 1px 1px #333;
+  color: #333;
+  font-family: "Titillium Web";
+  //text-shadow: 1px 1px 1px #333;
+  font-size: 18px;
+  text-transform: uppercase;
+  a {
+    color: #00fff5;
+    text-shadow: 1px 1px 0px #000;
+    &:hover { color: white; }
+  }
+
+  .hello {
+    a {
+      margin-right: 10px;
+    }
+  }
+
+  .pull-right, small {
+    //font-size: 12px;
+  }
 }
 
 body {
