--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,4 +45,25 @@
               = yield :ps
     %footer
       .container
-        %p Say hello. hello@thisyeari.com
+        %span.hello
+          Say hello. <a href="mailto:hello@thisyeari.com">hello@thisyeari.com</a>
+          <a href="http://twitter.com/thisyeariapp">@thisyeariapp</a>
+          /%small &copy; 2014 thisyeari.com
+          /= link_to 'Privacy Policy', '/privacy-policy'
+        %span.pull-right
+          = link_to 'Privacy Policy', '/privacy-policy'
+          &copy; 2014 thisyeari.com 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
