--- a/app/assets/stylesheets/style.css.scss.less
+++ b/app/assets/stylesheets/style.css.scss.less
@@ -25,13 +25,10 @@ footer {
 
   .hello {
     a {
-      margin-right: 10px;
+      margin-left: 10px;
     }
   }
 
-  .pull-right, small {
-    //font-size: 12px;
-  }
 }
 
 body {
@@ -54,6 +51,11 @@ body {
   -webkit-border-radius: 0;
   -ms-border-radius: 0;
   border: 0;
+}
+
+.btn-primary[disabled] {
+  background-color: #333;
+  color: white;
 }
 
 a.btn:visited {
@@ -234,7 +236,7 @@ form.xlarge {
 
 .ps h4,
 a.loud,
-//footer,
+footer,
 .user-nav span,
 .help a {
   color: #00FFF5;
@@ -298,7 +300,7 @@ h2.negative { color: red;   }
   .user-nav {
     display: inline-block;
     float: right;
-    .providers {
+    .providers, .controls {
       font-size: 26px;
     }
   }
