--- a/app/views/goals/_short_form.html.haml
+++ b/app/views/goals/_short_form.html.haml
@@ -1,4 +1,5 @@
 = form_for @goal || Goal.new, url: goals_path, :html => { :class => 'form-horizontal large' } do |f|
   .form-group
     = f.text_field :description, class: 'form-control', autofocus: false, value: 'This year I will '
-  = f.submit "Set my goal", disabled: true, :disable_with => 'Submiting...', class: 'btn btn-large btn-primary', id: 'submit-goal'
+  = f.submit "Set my goal", class: 'btn btn-large btn-primary vis-disabled', id: 'submit-goal'
+  /= f.submit "Set my goal", disabled: false, :disable_with => 'Submiting...', class: 'btn btn-large btn-primary disabled', id: 'submit-goal'
