--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,6 +1,6 @@
 %h1.page-header About
 
-%p.lead <a href="http://www.thisyeari.com">THISYEARI.COM</a> is a website that challenges you to set one quantifiable goal to reach by the end of the year.
+%p.lead <a href="http://www.thisyeari.com">THISYEARI.COM</a> challenges you to set one quantifiable goal to reach by the end of the year.
 
 %p.lead Once you set your goal you'll see a dashboard showing your current status. As you update your progress the dashboard updates stats showing where you are versus where you should be at various dates. Use this data to stay motivated and not fall behind!
 
