small screen styles

--- a/app/assets/stylesheets/style.css.scss.less
+++ b/app/assets/stylesheets/style.css.scss.less
@@ -259,7 +259,6 @@ a.loud,
 footer,
 .user-nav span,
 .help a {
-  color: #00FFF5;
   color: whitesmoke;
   background-color: #333;
   padding: 5px 10px;
@@ -321,12 +320,21 @@ h2.negative { color: red;   }
     display: inline-block;
     float: right;
     .providers, .controls {
-      font-size: 26px;
+      font-size: 22px;
     }
+  }
+
+  .ps h4,
+  a.loud,
+  footer,
+  .user-nav span,
+  .help a {
+    font-size: 14px;
   }
 
   .navbar {
     margin-bottom: 10px;
+    .navbar-brand { font-size: 26px; }
   }
 
   .well {
